--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
+    <link href="node_modules/fullcalendar/dist/fullcalendar.min.css" rel="stylesheet"/>
 </head>
 <body>
     <!--[if lt IE 9]>
